refactored the regex check

--- a/form.html
+++ b/form.html
@@ -71,5 +71,6 @@
     </div>
     <script src="./form.js"></script>
     <!-- <script src="./formRethink.js"></script> -->
+    <!-- <script src="regex.js"></script> -->
   </body>
 </html>
