refactored the regex check

--- a/form.html
+++ b/form.html
@@ -21,7 +21,9 @@
             type="text"
             placeholder="Username"
             id="username"
-            autocomplete="username"
+            autocomplete="name"
+            autofocus
+            required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
@@ -35,6 +37,21 @@
             placeholder="Username@gmail.com"
             id="email"
             autocomplete="email"
+            required
+          />
+          <i class="fa fa-check-circle"></i>
+          <i class="fa fa-exclamation-circle"></i>
+          <small>Error message</small>
+        </div>
+
+        <div class="form-control">
+          <label for="">Address</label>
+          <input
+            type="text"
+            placeholder="Enter your address"
+            id="address"
+            autocomplete="street-address"
+            required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
@@ -48,6 +65,7 @@
             placeholder="Password"
             id="password1"
             autocomplete="password"
+            required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
@@ -61,6 +79,7 @@
             placeholder="Confirm password"
             id="password2"
             autocomplete="password"
+            required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
