refactored roving.js amd mainroving.js

--- a/form.html
+++ b/form.html
@@ -88,6 +88,7 @@
         <button>SUBMIT</button>
       </form>
     </div>
+    <script src="/focus-visible-master/src/focus-visible.js"></script>
     <script src="./form.js"></script>
     <!-- <script src="./formRethink.js"></script> -->
     <!-- <script src="regex.js"></script> -->
