aria now alerts invalid form errors

--- a/form.html
+++ b/form.html
@@ -12,83 +12,87 @@
   <body id="particles-js">
     <div class="container">
       <div class="header">
-        <h2>Create Account</h2>
+        <h1>Create Account</h1>
       </div>
       <form action="./welcome-page.html" class="form" id="form">
         <div class="form-control">
-          <label for="">Username</label>
+          <label for="username">Username</label>
           <input
             type="text"
-            placeholder="Username"
             id="username"
             autocomplete="name"
-            autofocus
+            name="username"
+            aria-invalid="false"
             required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
-          <small>Error message</small>
+          <small aria-hidden="true"></small>
         </div>
 
         <div class="form-control">
-          <label for="">Email</label>
+          <label for="email">Email</label>
           <input
             type="email"
-            placeholder="Username@gmail.com"
             id="email"
             autocomplete="email"
+            name="email"
+            aria-invalid="false"
             required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
-          <small>Error message</small>
+          <small aria-hidden="true"></small>
         </div>
 
         <div class="form-control">
-          <label for="">Address</label>
+          <label for="address">Address</label>
           <input
             type="text"
-            placeholder="Enter your address"
             id="address"
             autocomplete="street-address"
+            name="address"
+            aria-invalid="false"
             required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
-          <small>Error message</small>
+          <small aria-hidden="true"></small>
         </div>
 
         <div class="form-control">
-          <label for="">Password</label>
+          <label for="password1">Password</label>
           <input
             type="password"
-            placeholder="Password"
             id="password1"
             autocomplete="password"
+            name="password1"
+            aria-invalid="false"
             required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
-          <small>Error message</small>
+          <small aria-hidden="true"></small>
         </div>
 
         <div class="form-control">
-          <label for="">Password</label>
+          <label for="password2">Password</label>
           <input
             type="password"
-            placeholder="Confirm password"
             id="password2"
             autocomplete="password"
+            name="password2"
+            aria-invalid="false"
             required
           />
           <i class="fa fa-check-circle"></i>
           <i class="fa fa-exclamation-circle"></i>
-          <small>Error message</small>
+          <small aria-hidden="true"></small>
         </div>
         <button>SUBMIT</button>
       </form>
     </div>
-    <script src="/focus-visible-master/src/focus-visible.js"></script>
+    <!-- <script src="/focus-visible-master/src/focus-visible.js"></script> -->
     <script src="./form.js"></script>
     <!-- <script src="./formRethink.js"></script> -->
     <!-- <script src="regex.js"></script> -->
