resolved voice over form control issues

--- a/form.html
+++ b/form.html
@@ -10,88 +10,88 @@
     <link rel="stylesheet" href="./form.css" />
   </head>
   <body id="particles-js">
-    <div class="container">
+    <!-- <div class="container"> -->
+    <form action="./welcome-page.html" class="form container" id="form">
       <div class="header">
         <h1>Create Account</h1>
       </div>
-      <form action="./welcome-page.html" class="form" id="form">
-        <div class="form-control">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            autocomplete="name"
-            name="username"
-            aria-invalid="false"
-            required
-          />
-          <i class="fa fa-check-circle"></i>
-          <i class="fa fa-exclamation-circle"></i>
-          <small aria-hidden="true"></small>
-        </div>
+      <div class="form-control">
+        <label for="username">Username</label>
+        <input
+          type="text"
+          id="username"
+          autocomplete="name"
+          name="username"
+          aria-invalid="false"
+          required
+        />
+        <i class="fa fa-check-circle"></i>
+        <i class="fa fa-exclamation-circle"></i>
+        <small aria-hidden="true"></small>
+      </div>
 
-        <div class="form-control">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            autocomplete="email"
-            name="email"
-            aria-invalid="false"
-            required
-          />
-          <i class="fa fa-check-circle"></i>
-          <i class="fa fa-exclamation-circle"></i>
-          <small aria-hidden="true"></small>
-        </div>
+      <div class="form-control">
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          autocomplete="email"
+          name="email"
+          aria-invalid="false"
+          required
+        />
+        <i class="fa fa-check-circle"></i>
+        <i class="fa fa-exclamation-circle"></i>
+        <small aria-hidden="true"></small>
+      </div>
 
-        <div class="form-control">
-          <label for="address">Address</label>
-          <input
-            type="text"
-            id="address"
-            autocomplete="street-address"
-            name="address"
-            aria-invalid="false"
-            required
-          />
-          <i class="fa fa-check-circle"></i>
-          <i class="fa fa-exclamation-circle"></i>
-          <small aria-hidden="true"></small>
-        </div>
+      <div class="form-control">
+        <label for="address">Address</label>
+        <input
+          type="text"
+          id="address"
+          autocomplete="street-address"
+          name="address"
+          aria-invalid="false"
+          required
+        />
+        <i class="fa fa-check-circle"></i>
+        <i class="fa fa-exclamation-circle"></i>
+        <small aria-hidden="true"></small>
+      </div>
 
-        <div class="form-control">
-          <label for="password1">Password</label>
-          <input
-            type="password"
-            id="password1"
-            autocomplete="password"
-            name="password1"
-            aria-invalid="false"
-            required
-          />
-          <i class="fa fa-check-circle"></i>
-          <i class="fa fa-exclamation-circle"></i>
-          <small aria-hidden="true"></small>
-        </div>
+      <div class="form-control">
+        <label for="password1">Password</label>
+        <input
+          type="password"
+          id="password1"
+          autocomplete="password"
+          name="password1"
+          aria-invalid="false"
+          required
+        />
+        <i class="fa fa-check-circle"></i>
+        <i class="fa fa-exclamation-circle"></i>
+        <small aria-hidden="true"></small>
+      </div>
 
-        <div class="form-control">
-          <label for="password2">Password</label>
-          <input
-            type="password"
-            id="password2"
-            autocomplete="password"
-            name="password2"
-            aria-invalid="false"
-            required
-          />
-          <i class="fa fa-check-circle"></i>
-          <i class="fa fa-exclamation-circle"></i>
-          <small aria-hidden="true"></small>
-        </div>
-        <button>SUBMIT</button>
-      </form>
-    </div>
+      <div class="form-control">
+        <label for="password2">Password</label>
+        <input
+          type="password"
+          id="password2"
+          autocomplete="password"
+          name="password2"
+          aria-invalid="false"
+          required
+        />
+        <i class="fa fa-check-circle"></i>
+        <i class="fa fa-exclamation-circle"></i>
+        <small aria-hidden="true"></small>
+      </div>
+      <button>SUBMIT</button>
+    </form>
+    <!-- </div> -->
     <!-- <script src="/focus-visible-master/src/focus-visible.js"></script> -->
     <script src="./form.js"></script>
     <!-- <script src="./formRethink.js"></script> -->
